--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body{
     background-color: #fff;
-    height: 100vh;
+    height: 100%;
 }
 
 .container{
@@ -114,7 +114,7 @@ form input[type=text], form input[type=password], form input[type=email]{
 
 .info-img{
     width: 100%;
-    max-width: 400px;
+    max-width: 350px;
     height: auto;
     margin-bottom: 18px;
 }
